idea/testData/multiModuleHighlighting/platform3/header/header.kt
platform class <error descr="[PLATFORM_DECLARATION_WITHOUT_DEFINITION] Declaration 'My' has no definition in platform module for JS"><error descr="[PLATFORM_DECLARATION_WITHOUT_DEFINITION] Declaration 'My' has no definition in platform module for JVM">My</error></error> {

}